--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather App</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Welcome to the Weather App!</h1>
+    <footer>
+      Coded by
+      <a href="https://github.com/mayurieo" target="blank"> Mayurie Odayan</a>,
+      coded on
+      <a href="https://github.com/mayurieo/Weather" target="blank"> Github</a>
+      and hosted on
+      <a href="https://thedrizzle-weather-app.netlify.app/" target="blank"
+        >Netflify</a
+      >
+    </footer>
   </body>
 </html>
