--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Welcome to the Weather App!</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a City..." required />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Durban</h1>
+        <p>
+          Monday 11:10,scattered clouds
+          <br />
+          Humidity: 78%, Wind:3.13km/h
+        </p>
+      </div>
+
+      <div>☁️12°C</div>
+    </main>
+
     <footer>
       Coded by
       <a href="https://github.com/mayurieo" target="blank"> Mayurie Odayan</a>,
