Styled the main container

--- a/index.html
+++ b/index.html
@@ -3,37 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a City..." required />
-        <input type="submit" value="search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Durban</h1>
-        <p>
-          Monday 11:10,scattered clouds
-          <br />
-          Humidity: 78%, Wind:3.13km/h
-        </p>
-      </div>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a City..." required />
+          <input type="submit" value="search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Durban</h1>
+          <p>
+            Monday 11:10,scattered clouds
+            <br />
+            Humidity: 78%, Wind:3.13km/h
+          </p>
+        </div>
+        <div>☁️12°C</div>
+      </main>
 
-      <div>☁️12°C</div>
-    </main>
-
-    <footer>
-      Coded by
-      <a href="https://github.com/mayurieo" target="blank"> Mayurie Odayan</a>,
-      coded on
-      <a href="https://github.com/mayurieo/Weather" target="blank"> Github</a>
-      and hosted on
-      <a href="https://thedrizzle-weather-app.netlify.app/" target="blank"
-        >Netflify</a
-      >
-    </footer>
+      <footer>
+        Coded by
+        <a href="https://github.com/mayurieo" target="blank"> Mayurie Odayan</a
+        >, coded on
+        <a href="https://github.com/mayurieo/Weather" target="blank"> Github</a>
+        and hosted on
+        <a href="https://thedrizzle-weather-app.netlify.app/" target="blank"
+          >Netflify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
