--- a/index.html
+++ b/index.html
@@ -9,21 +9,32 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a City..." required />
-          <input type="submit" value="search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a City..."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Durban</h1>
-          <p>
-            Monday 11:10,scattered clouds
-            <br />
-            Humidity: 78%, Wind:3.13km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Durban</h1>
+            <p class="weather-app-details">
+              Monday <strong>11:10</strong>,Scattered clouds
+              <br />
+              Humidity: <strong>78%</strong>, Wind:<strong>3.13km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature">
+            <div class="weather-app-icon">☁️</div>
+            <div class="weather-app-temperature-value">12</div>
+            <div class="weather-app-unit">°C</div>
+          </div>
         </div>
-        <div>☁️12°C</div>
       </main>
 
       <footer>
