--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a City..."
             required
+            id="search-form-input"
             class="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
@@ -22,7 +23,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Durban</h1>
+            <h1 class="weather-app-city" id="city">Durban</h1>
             <p class="weather-app-details">
               Monday <strong>11:10</strong>,Scattered clouds
               <br />
@@ -48,5 +49,6 @@
         >
       </footer>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
