Added the search functionality using the API

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="city">Durban</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               Monday <strong>11:10</strong>,Scattered clouds
               <br />
@@ -33,7 +33,7 @@
           </div>
           <div class="weather-app-temperature">
             <div class="weather-app-icon">☁️</div>
-            <div class="weather-app-temperature-value">12</div>
+            <div class="weather-app-temperature-value" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
