--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
           </div>
           <div class="weather-app-temperature">
-            <div class="weather-app-icon">☁️</div>
+            <div id="icon"></div>
             <div class="weather-app-temperature-value" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
