--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
+
+        <div class="weather-forecast" id="forecast"></div>
       </main>
 
       <footer>
